--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ml-pca": "^4.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4",
     "recharts": "^3.2.1",
     "tailwindcss": "^4.1.13",
     "zustand": "^5.0.8"
